--- a/Familiares.html
+++ b/Familiares.html
@@ -34,7 +34,7 @@
 
             <button class="sign" id="guardarDatos">Guardar</button>
 
-            <a href="Datos_personales.html" class="sign" id="irPagina1">Ir a la Página 1</a>
+            <a href="index.html" class="sign" id="irPagina1">Ir a la Página 1</a>
         </div>
     </div>
 
